# iot-farm-app

./: Cargo.toml  flake.nix  sdkconfig.defaults
.cargo/: config.toml
src/: display.rs  main.rs  network.rs  other.rs  peripherals.rs  soil.rs  wifi.rs
