[package]
name = "esp32-farm-app"
version = "0.1.0"
authors = ["ThisKappaIsGrey <thanatechaumnuaiwit@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = "1.0.69"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3.3"
esp-idf-hal = "0.39.4"
esp-idf-sys = { version = "0.31.11", features = ["binstart"] }
gfx-xtra = "0.1.1"
mipidsi = "0.6.0"


[build-dependencies]
embuild = "0.30.4"
