[package]
name = "esp32-farm-app"
version = "0.1.0"
authors = ["ThisKappaIsGrey <thanatechaumnuaiwit@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

# [features]
# pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = "1.0.69"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3.3"
embedded-svc = "0.24.0"
esp-idf-hal = "0.40.1"
esp-idf-svc = {version="0.45.0", features=["alloc", "experimental"]}
esp-idf-sys = {version= "0.32.1", features = ["binstart"] }
gfx-xtra = "0.1.1"
log = "0.4.17"
mipidsi = "0.6.0"
thiserror = "1.0.39"
# adafruit-seesaw = "0.5.0"

[build-dependencies]
embuild = "0.30.4"


[package.metadata.esp-idf-sys]
esp_idf_version = "v4.4.1"
